tests/ui/abi3_dict.stderr
error[E0080]: evaluation panicked: `dict` requires Python >= 3.9 when using the `abi3` feature
 --> tests/ui/abi3_dict.rs:4:11
  |
4 | #[pyclass(dict)]
  |           ^^^^ evaluation of `_::ASSERT_DICT_SUPPORTED` failed here
  |
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
